force-app/main/default/objects/docutizexa__Staff__c/docutizexa__Staff__c.object-meta.xml
<CustomObject>
    <label>Staff</label>
    <nameField>
        <label>StaffName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>staffers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>