force-app/main/default/objects/docutizexa__Staff__c/fields/docutizexa__Active__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>