force-app/main/default/objects/docutizexa__Staff__c/fields/docutizexa__Age__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__Age__c</fullName>
    <label>Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>