force-app/main/default/objects/docutizexa__Staff__c/fields/docutizexa__Cost__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__Cost__c</fullName>
    <label>Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>