force-app/main/default/objects/docutizexa__Staff__c/fields/docutizexa__EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__EmailAddress__c</fullName>
    <label>EmailAddress</label>
    <type>Email</type>
</CustomField>