force-app/main/default/objects/docutizexa__Staff__c/fields/docutizexa__Organization__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>docutizexa__Organization__c</referenceTo>
    <relationshipLabel>staffers</relationshipLabel>
    <relationshipName>staffers</relationshipName>
    <type>Lookup</type>
</CustomField>