force-app/main/default/objects/docutizexa__Staff__c/fields/docutizexa__Sex__c.field-meta.xml
<CustomField>
    <fullName>docutizexa__Sex__c</fullName>
    <label>Sex</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Man</fullName>
            </value>
            <value>
                <fullName>Woman</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>